cleanup to resolve names