@@ -8,27 +8,30 @@ import java.util.List;
 
 import matrixtree.computation.ExactMatrixOp;
 import matrixtree.computation.MatrixOp;
-import matrixtree.matrices.EncodingMatrix;
-import matrixtree.matrices.HazelEncodingMatrix;
+import matrixtree.matrices.PathMatrix;
+import matrixtree.matrices.HazelPathMatrix;
 import matrixtree.matrices.HazelNodeMatrix;
 import matrixtree.matrices.HazelOriginMatrix;
-import matrixtree.matrices.TreeMatrix;
+import matrixtree.matrices.StandardMatrix;
+
+import static java.util.Collections.*;
+
 /**
  * @author Agustinus Lawandy
  */
 public class HazelTreePath implements TreePath  {
 	private final List<Long> path;
-	private final EncodingMatrix encoding;
+	private final PathMatrix encoding;
 	
 	public HazelTreePath(Long... nodes) {
 		super();
-		this.path = Collections.unmodifiableList(Arrays.asList(nodes));
+		this.path = unmodifiableList(List.of(nodes));
 		this.encoding = computeEncoding(this.path);
 	}
 	
 	public HazelTreePath(List<Long> nodes) {
 		super();
-		this.path = Collections.unmodifiableList(nodes);
+		this.path = unmodifiableList(nodes);
 		this.encoding = computeEncoding(this.path);
 	}
 	
@@ -51,19 +54,19 @@ public class HazelTreePath implements TreePath  {
 	}
 	
 	@Override
-	public EncodingMatrix getEncodingMatrix() {
+	public PathMatrix getPathMatrix() {
 		return encoding;
 	}
 
-	private HazelEncodingMatrix computeEncoding(List<Long> nodes)
+	private HazelPathMatrix computeEncoding(List<Long> nodes)
 	{
-		List<TreeMatrix> product = new ArrayList<>();
+		List<StandardMatrix> product = new ArrayList<>();
 		
 		product.add(new HazelOriginMatrix());
 		nodes.forEach(node -> product.add(new HazelNodeMatrix(node)));
 		
 		MatrixOp op = new ExactMatrixOp();
-		return new HazelEncodingMatrix(op.multiply(product));
+		return new HazelPathMatrix(op.multiply(product));
 	}
 	
 }
